--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 logging.level.org.springframework.web=DEBUG
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
